# ha-mqtt-discovery-rs

./: .gitignore  Cargo.toml  README.md  devenv.nix  devenv.yaml  generate.sh
.github/: renovate.json5
.github/workflows/: build.yml
generate-openapi-specs/: README.md  bun.lockb  package.json
generate-openapi-specs/src/: HomeAssistantConfigurationModel.ts  abbreviations.ts  index.ts  index.ts.old
generator/: README.md  bun.lockb  package.json
generator/input/: device_tracker.mqtt.markdown  light.mqtt.markdown
generator/src/: abbretiations.ts  device-class.ts  entity.ts  index.ts  rust_device_classes.mustache  rust_mod.mustache  rust_model.mustache  strings.ts
specs/: openapi.yml
specs/fragments/: alarm_control_panel.yml  binary_sensor.yml  button.yml  camera.yml  common.yml  cover.yml  device_tracker.yml  device_trigger.yml  event.yml  fan.yml  humidifier.yml  image.yml  lawn_mower.yml  light.yml  lock.yml  scene.yml  select.yml  sensor.yml  siren.yml  switch.yml  tag.yml  text.yml  update.yml  vacuum.yml
src/: lib.rs
src/mqtt/: alarm_control_panel.rs  binary_sensor.rs  button.rs  camera.rs  climate.rs  common.rs  cover.rs  device_classes.rs  device_tracker.rs  device_trigger.rs  event.rs  fan.rs  humidifier.rs  image.rs  lawn_mower.rs  lock.rs  mod.rs  number.rs  scene.rs  select.rs  sensor.rs  siren.rs  switch.rs  tag.rs  text.rs  units.rs  update.rs  vacuum.rs  valve.rs  water_heater.rs
test/: README.md
test/.openapi-generator/: FILES
test/docs/: AlarmControlPanel.md  AlarmControlPanelAvailabilityInner.md  Fan.md  (+48 more)
tests/: integration_tests.rs
(+43 files in other folders)
