[package]
name = "ha-mqtt-discovery"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
rumqttc = "0.24"
rust_decimal = {version = "1.35", features = ["serde-float"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dev-dependencies]
assert-json-diff = "=2.0.2"
testcontainers-modules = {version = "=0.11.6", features = ["mosquitto"]}
tokio = "=1.43.0"
rust_decimal_macros = "=1.36.0"